k8s/multiple deployments/03-mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgw-mysql
spec:
  selector:
    matchLabels:
      app: mgw-mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: mgw-mysql
    spec:
      containers:
      - name: mysql
        image: registry.diginfra.net/mysql:5.6
        resources:
          limits:
            cpu: 200m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 3306
          name: mgw-mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mgw-mysql-data
      volumes:
      - name: mgw-mysql-data
        persistentVolumeClaim:
          claimName: mgw-pvc
