k8s/multiple deployments/05-php-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgw-php
spec:
  selector:
    matchLabels:
      app: mgw-php
  strategy:
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mgw-php
        external-ingress: enabled
    spec:
      containers:
      - name: php
        image: registry.diginfra.net/apache-php:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
