k8s/multiple deployments/07-mgw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mgw
spec:
  rules:
  # verzin zelf een unieke hostnaam als je hiermee gaat experimenteren svp
  # anders weet je nooit waar je uitkomt als meerdere ingresses dezelfde hostnaam claimen
  - host: matenengewichten.diginfra.net
    http:
      paths:
      - backend:
          serviceName: mgw-php
          servicePort: http
